--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -1,11 +1,12 @@
 
 .Footer{
-    top: 0;
     font-size: 20px;
     background-color: rgb(145, 141, 141);
     height: 72px;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
