--- a/src/component/Homepage/Homepage.css
+++ b/src/component/Homepage/Homepage.css
@@ -1,10 +1,12 @@
 
 .Homepage {
+flex: 1;
 text-align: center;
 font-size: 35px;
 display: flex;
 flex-direction: column;
 align-items: center;
+justify-content: center;
 }
 .dienthoai{
     width: 1000px;
